--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,1 @@
-hellohow = from git hub
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.config.import=optional:configserver:http://localhost:8888
+my.app.title=krishan
